third_party/move/move-compiler-v2/tests/checking/receiver/concrete_receiver_cross_module_errors.exp

Diagnostics:
warning: parameter name `self` indicates a receiver function but the type `0x42::types::Box<u64>` is declared outside of this module and new receiver functions cannot be added. Consider using a different name.
  ┌─ tests/checking/receiver/concrete_receiver_cross_module_errors.move:9:9
  │
9 │     fun unbox(self: Box<u64>): u64 { abort 0 }
  │         ^^^^^

error: undeclared receiver function `unbox` for type `types::Box<u64>`
   ┌─ tests/checking/receiver/concrete_receiver_cross_module_errors.move:14:9
   │
14 │         b.unbox();
   │         ^^^^^^^^^
